# chess-engine-2

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
docs/: model.md  project-goals.md
notebooks/: scaling_laws.py
src/: dataloader.py  model.py  train.py
src/chess_engine_2/: __init__.py  dataloader.py  hyperparameters.py  model.py  train.py  utils.py
src/chess_engine_2/baselines/: debug.yaml  e12.yaml  e13.yaml  e14.yaml
src/chess_engine_2/experiments/: tune_lr.py  tune_model_size.py
tests/: test_baseline_flops.py  test_baseline_flops_e10.py  test_baseline_flops_e12.py  test_dataloader_lc0.py  test_dataloader_snapshots.py  test_sanity.py
tests/__snapshots__/test_dataloader_snapshots/: test_snapshot_first_two_games[training.1387357298.gz].raw  test_snapshot_first_two_games[training.1387366590.gz].raw
tests/data/: lc0-data-sample.tar
