[project]
name = "chess-engine-2"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.8.0",
    "python-dotenv>=1.0.1",
    "numpy>=2.3.2",
    "pyyaml>=6.0.2",
    "pydantic>=2.8.2",
    "wandb>=0.21.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.6.8",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (errors)
    "F",   # pyflakes
    "I",   # isort (imports)
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["chess_engine_2"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[project.scripts]
train = "chess_engine_2.train:cli"
